@@ -1,5 +1,5 @@
 /* Reverse Engineer's Hex Editor
- * Copyright (C) 2020-2022 Daniel Collins <solemnwarning@solemnwarning.net>
+ * Copyright (C) 2020-2023 Daniel Collins <solemnwarning@solemnwarning.net>
  *
  * This program is free software; you can redistribute it and/or modify it
  * under the terms of the GNU General Public License version 2 as published by
@@ -871,4 +871,93 @@ TEST_F(StringPanelTest, UTF16)
 		
 		EXPECT_EQ(got_strings, EXPECT_STRINGS);
 	}
+}
+
+TEST_F(StringPanelTest, SelectAllCopyText)
+{
+	std::vector<unsigned char> data(1024, 0);
+	
+	strcpy((char*)(data.data() + 10),  "appendix");
+	strcpy((char*)(data.data() + 50),  "television");
+	strcpy((char*)(data.data() + 200), "institution");
+	strcpy((char*)(data.data() + 300), "nominate");
+	
+	doc->insert_data(0, data.data(), data.size());
+	
+	string_panel = new StringPanel(&frame, doc, main_doc_ctrl);
+	string_panel->set_min_string_length(4);
+	string_panel->set_visible(true);
+	
+	EXPECT_NE(string_panel->get_num_threads(), 0U) << "StringPanel spawns workers for non-empty file";
+	
+	wait_for_idle(1000);
+	
+	EXPECT_EQ(string_panel->get_clean_bytes(), 1024U) << "StringPanel processed all data in file";
+	EXPECT_EQ(string_panel->get_num_threads(), 0U) << "StringPanel workers exited";
+	
+	ByteRangeSet strings = string_panel->get_strings();
+	std::vector<ByteRangeSet::Range> got_strings(strings.begin(), strings.end());
+	
+	const std::vector<ByteRangeSet::Range> EXPECT_STRINGS = {
+		ByteRangeSet::Range( 10,  8),
+		ByteRangeSet::Range( 50, 10),
+		ByteRangeSet::Range(200, 11),
+		ByteRangeSet::Range(300,  8),
+	};
+	
+	ASSERT_EQ(got_strings, EXPECT_STRINGS) << "StringPanel found strings in file";
+	
+	string_panel->select_all();
+	wxString clipboard_string = string_panel->copy_get_string(&StringPanel::get_item_string);
+	
+	EXPECT_EQ(clipboard_string,
+		"appendix\n"
+		"television\n"
+		"institution\n"
+		"nominate"
+	);
+}
+
+TEST_F(StringPanelTest, SelectSomeCopyOffsetAndText)
+{
+	std::vector<unsigned char> data(1024, 0);
+	
+	strcpy((char*)(data.data() + 10),  "appendix");
+	strcpy((char*)(data.data() + 50),  "television");
+	strcpy((char*)(data.data() + 200), "institution");
+	strcpy((char*)(data.data() + 300), "nominate");
+	
+	doc->insert_data(0, data.data(), data.size());
+	
+	string_panel = new StringPanel(&frame, doc, main_doc_ctrl);
+	string_panel->set_min_string_length(4);
+	string_panel->set_visible(true);
+	
+	EXPECT_NE(string_panel->get_num_threads(), 0U) << "StringPanel spawns workers for non-empty file";
+	
+	wait_for_idle(1000);
+	
+	EXPECT_EQ(string_panel->get_clean_bytes(), 1024U) << "StringPanel processed all data in file";
+	EXPECT_EQ(string_panel->get_num_threads(), 0U) << "StringPanel workers exited";
+	
+	ByteRangeSet strings = string_panel->get_strings();
+	std::vector<ByteRangeSet::Range> got_strings(strings.begin(), strings.end());
+	
+	const std::vector<ByteRangeSet::Range> EXPECT_STRINGS = {
+		ByteRangeSet::Range( 10,  8),
+		ByteRangeSet::Range( 50, 10),
+		ByteRangeSet::Range(200, 11),
+		ByteRangeSet::Range(300,  8),
+	};
+	
+	ASSERT_EQ(got_strings, EXPECT_STRINGS) << "StringPanel found strings in file";
+	
+	string_panel->select_by_file_offset(10);
+	string_panel->select_by_file_offset(200);
+	wxString clipboard_string = string_panel->copy_get_string(&StringPanel::get_item_offset_and_string);
+	
+	EXPECT_EQ(clipboard_string,
+		"0000:000A\tappendix\n"
+		"0000:00C8\tinstitution"
+	);
 }
